--- a/css/styles.css
+++ b/css/styles.css
@@ -540,7 +540,7 @@ img{
     padding: 32px 16px;
 }
 
-.section__abt__items__details:hover{
+.section__abt__items:hover{
     cursor: pointer;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
